[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://fonts/LeagueMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://textures/icon_resize_normal.png" type="Texture" id=3]
[ext_resource path="res://textures/icon_resize_hover.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.921569, 0.505882, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.921569, 0.505882, 1 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0.615686, 0.615686, 0.615686, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_color = Color( 0.615686, 0.615686, 0.615686, 1 )
use_mipmaps = true
extra_spacing_bottom = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_color = Color( 0.615686, 0.615686, 0.615686, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.94902, 0.670588, 1 )

[sub_resource type="DynamicFont" id=7]
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 600 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
rect_min_size = Vector2( 400, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MenuBar" type="Control" parent="Control"]
editor/display_folded = true
margin_right = 400.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Background" type="Panel" parent="Control/MenuBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.773804
margin_right = 0.773804
rect_min_size = Vector2( 400, 30 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="MenuButton" type="MenuButton" parent="Control/MenuBar"]
margin_right = 42.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Menu"
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.352941, 0.34902, 0.34902, 1 )
text = "..."

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MenuBar"]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 31.0
mouse_filter = 2

[node name="MinimizeButton" type="Button" parent="Control/MenuBar/HBoxContainer"]
margin_right = 30.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Minimize
"
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.352941, 0.34902, 0.34902, 1 )
enabled_focus_mode = 0
text = "_"
flat = true

[node name="CloseButton" type="Button" parent="Control/MenuBar/HBoxContainer"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Close"
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.352941, 0.34902, 0.34902, 1 )
enabled_focus_mode = 0
text = "X"
flat = true

[node name="TextInput" type="Control" parent="Control"]
margin_top = 30.0
margin_right = 400.0
margin_bottom = 604.0
rect_min_size = Vector2( 400, 570 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Control/TextInput"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
rect_min_size = Vector2( 400, 570 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/selection_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/caret_color = Color( 0.294118, 0.290196, 0.290196, 1 )
custom_colors/font_color_selected = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
smooth_scrolling = true
wrap_enabled = true
caret_blink = true

[node name="OptionsMenu" type="WindowDialog" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.8309
margin_top = 132.404
margin_right = -43.1691
margin_bottom = -190.596

[node name="AlwaysOnTopButton" type="CheckButton" parent="OptionsMenu"]
margin_left = 6.0
margin_top = 7.0
margin_right = 226.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 8 )
text = "Always on Top "
flat = true

[node name="DeleteDataButton" type="Button" parent="OptionsMenu"]
margin_left = 163.653
margin_top = 228.643
margin_right = 290.653
margin_bottom = 268.643
focus_mode = 0
custom_fonts/font = SubResource( 8 )
enabled_focus_mode = 0
text = "Delete Data"

[node name="ColorPickerButton" type="ColorPickerButton" parent="OptionsMenu"]
margin_left = 158.309
margin_top = 53.0292
margin_right = 252.309
margin_bottom = 87.0292
text = "Editor Color"
color = Color( 1, 0.94902, 0.670588, 1 )

[node name="EditorColorLabel" type="Label" parent="OptionsMenu"]
margin_left = 25.8404
margin_top = 58.6136
margin_right = 145.84
margin_bottom = 78.6136
custom_fonts/font = SubResource( 8 )
text = "Editor Color"

[node name="ResizeButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
[connection signal="gui_input" from="Control/MenuBar" to="." method="_on_TopContainer_gui_input"]
[connection signal="pressed" from="Control/MenuBar/HBoxContainer/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="Control/MenuBar/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="text_changed" from="Control/TextInput/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="toggled" from="OptionsMenu/AlwaysOnTopButton" to="." method="_on_AlwaysOnTopButton_toggled"]
[connection signal="pressed" from="OptionsMenu/DeleteDataButton" to="." method="_on_DeleteDataButton_pressed"]
[connection signal="color_changed" from="OptionsMenu/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="button_down" from="ResizeButton" to="." method="_on_ResizeButton_button_down"]
[connection signal="button_up" from="ResizeButton" to="." method="_on_ResizeButton_button_up"]
